--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,41 +1,52 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap");
 
 body {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	background: #f1f1f1;
 	padding: 0px;
 	margin: 0px;
 }
+#draggable {
+	background-color: #dfdfdfa8;
+	width: 100%;
+	height: 23px;
+	-webkit-app-region: drag;
+}
 
 #title {
-	font-family: "Roboto Mono";
 	color: #cc6166;
 	font-size: 40px;
+	font-family: "Roboto Mono";
 }
 
 header {
-	height: 85px;
+	width: 100%;
+	height: 70px;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-around;
 	margin: 0px;
 	-webkit-user-select: none;
-	-webkit-app-region: drag;
 }
 
 #headerButton {
 	height: 30px;
-	width: 70px;
+	width: 90px;
 	background-color: #cc6166;
 	color: #fff;
 	-webkit-app-region: no-drag;
+	border-width: 0px;
+	font-family: "Roboto Mono";
 }
 #addItemDiv {
 	display: flex;
 	width: 85%;
 	flex-direction: row;
 	align-items: center;
-	align-self: flex-end;
+	align-self: center;
 	justify-content: space-between;
 	padding: 14px;
 	background-color: #cc6166;
@@ -45,14 +56,22 @@ header {
 }
 #input {
 	background-color: #f1f1f1;
-	font-size: 16px;
+	font-size: 17px;
+	font-family: "Roboto Mono";
 	width: 70%;
 	color: black;
 	border-width: 0px;
+	border-radius: 4px;
+	padding: 2px;
+	padding-left: 8px;
 }
 #addItemButton {
 	background-color: #cc6166;
-	/* height: 50px;
-		width: 70px; */
+	align-items: center;
+	justify-content: center;
+	border-width: 0px;
 	color: #f1f1f1;
+	font-size: 13px;
+	width: 25%;
+	font-family: "Roboto Mono";
 }
