--- a/src/styles/Initial.css
+++ b/src/styles/Initial.css
@@ -1,45 +1,75 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap");
 
+* {
+	-webkit-user-select: none;
+}
+
 #draggable {
-	background-color: #dfdfdfa8;
 	width: 100%;
 	height: 23px;
 	-webkit-app-region: drag;
+	position: absolute;
+	top: 0px;
 }
 
 body {
-	display: flex;
-	flex-direction: column;
 	margin: 0px;
 	padding: 0px;
 }
 
-#topArea {
+#container {
 	display: flex;
-	height: 50%;
+	flex-direction: column;
+	flex: auto;
+	padding: 0px;
+	margin: 0px;
+	width: 100%;
+	height: 100vh;
 	background-color: #dfdfdfa8;
-	align-items: center;
-	justify-content: center;
 }
 
-#pageTitle {
+#interactionArea {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+}
+
+#topArea {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+	height: 35vh;
+}
+
+#title {
+	font-size: 62px;
+	font-family: "Roboto mono";
 	color: #cc6166;
+}
+
+#description {
 	font-family: "Roboto Mono";
+	font-size: 16;
+	max-width: 85%;
 }
 
 #chooseContainer {
 	display: flex;
-	height: 50%;
 	flex-direction: column;
-	background-color: #f1f1f1;
 	justify-content: space-around;
+	height: 65vh;
+	background-color: #fff;
+	border-top-right-radius: 30;
+	border-top-left-radius: 30;
 }
 
 .chooseArea {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	padding: 8px;
+	padding: 4px;
 	padding-left: 20px;
 }
 
@@ -47,17 +77,22 @@ body {
 	color: #353535;
 	font-family: "Roboto Mono";
 	font-size: 16px;
+	margin-left: 20px;
 }
 
 .chooseButton {
 	display: flex;
 	background-color: #cc6166;
 	color: #fff;
-	font-size: 18px;
-	width: 45%;
+	font-size: 20px;
+	font-weight: bold;
+	font-family: "Roboto Mono";
+	width: 90%;
 	align-items: center;
+	align-self: center;
 	justify-content: center;
 	border-width: 0px;
 	border-radius: 10px;
-	padding: 6px;
+	padding: 7px;
+	/* margin-top: 7px; */
 }
