DoIt v.1.0 Login and Register screens design`s are done; Sign in and sign up functionalities are working;

--- a/src/styles/Initial.css
+++ b/src/styles/Initial.css
@@ -39,7 +39,7 @@ body {
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
-	justify-content: center;
+	justify-content: space-around;
 	height: 35vh;
 }
 
