--- a/src/styles/Initial.css
+++ b/src/styles/Initial.css
@@ -18,7 +18,6 @@ body {
 }
 
 #container {
-	display: flex;
 	flex-direction: column;
 	flex: auto;
 	padding: 0px;
@@ -29,7 +28,7 @@ body {
 }
 
 #interactionArea {
-	display: flex;
+	display: none;
 	flex-direction: column;
 	height: 100vh;
 }
@@ -94,5 +93,34 @@ body {
 	border-width: 0px;
 	border-radius: 10px;
 	padding: 7px;
-	/* margin-top: 7px; */
+}
+
+#loaderContainer {
+	display: flex;
+	margin: 0px;
+	padding: 0px;
+	height: 100vh;
+	align-items: center;
+	justify-content: center;
+	overflow-y: hidden;
+	overflow-x: hidden;
+}
+
+#loader {
+	width: 70px;
+	height: 70px;
+	margin: auto;
+	border: 10px solid #a4a4a4;
+	border-top-color: #cc6166;
+	border-radius: 50%;
+	-webkit-animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
 }
