--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -5,7 +5,7 @@
 }
 
 #draggable {
-	background-color: #dfdfdfa8;
+	/* background-color: #dfdfdfa8; */
 	width: 100%;
 	height: 23px;
 	-webkit-app-region: drag;
