DoIt v.1.0 Saving and deleting functions are working; Star is orange or grey based on important property of the item; Add item function created but not working properly yet.

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -151,3 +151,10 @@ header {
 	color: #c13e45;
 	cursor: pointer;
 }
+
+.material-icons.orange {
+	color: orange;
+}
+.material-icons.grey {
+	color: #bfbfbf80;
+}
