DoIt v.1.0 Items separated in importamt and not important items; Star removed from items; items created can be marked as important; All outlines removed.

--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -2,6 +2,7 @@
 
 * {
 	-webkit-user-select: none;
+	outline: none;
 }
 
 #draggable {
@@ -20,8 +21,10 @@ body {
 }
 
 #goBackButton {
+	outline: none;
 	width: fit-content;
 	color: #cc6166;
+	background-color: #f1f1f1;
 	font-family: "Roboto Mono";
 	font-size: 14px;
 	font-weight: bold;
