--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -3,7 +3,15 @@
 * {
 	-webkit-user-select: none;
 	outline: none;
+}
+
+body {
 	background-color: #fff;
+	margin-top: 0px;
+}
+
+button {
+	cursor: pointer;
 }
 
 #draggable {
@@ -20,6 +28,7 @@
 	border: 2px solid #cc6166;
 	border-radius: 6px;
 	margin-left: 8px;
+	margin-top: 8px;
 	cursor: pointer;
 }
 
@@ -50,9 +59,69 @@
 	color: #797979;
 	font-size: 34px;
 	font-family: "Roboto Mono";
+	background-color: transparent;
 }
 
 #userInfoTitle {
 	font-size: 24px;
 	margin-left: 20px;
+}
+
+#emailData {
+	background-color: transparent;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+#emailDataTitle {
+	font-family: "Roboto Mono";
+	font-weight: bold;
+	font-size: 16px;
+	margin: 0px;
+	margin-bottom: 8px;
+	margin-left: 4px;
+}
+
+#emailAdress {
+	margin: 0px;
+	font-family: "Roboto Mono";
+	font-weight: normal;
+	font-size: 14px;
+	margin-left: 12px;
+}
+
+#resetPasswordButton {
+	width: 40%;
+	border: 2px solid #858585;
+	border-radius: 8px;
+	padding: 3px;
+	color: #707070;
+	font-family: "Roboto Mono";
+	font-size: 14px;
+	margin-left: 8px;
+	margin-top: 25px;
+	cursor: pointer;
+}
+
+#logOutButton {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	width: 70%;
+	cursor: pointer;
+	background-color: #cc6166;
+	border-width: 0px;
+	border-radius: 14px;
+	font-family: "Roboto Mono";
+	font-size: 26px;
+	color: #fff;
+	align-self: center;
+	margin-top: 30px;
+}
+
+#logOutText {
+	font-size: 16px;
+	margin-left: 10px;
 }
