--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -95,6 +95,10 @@ body {
 	border-radius: 14px;
 }
 
+#loginButton:hover {
+	opacity: 0.8;
+}
+
 #resetPasswordButton {
 	font-family: "Roboto Mono";
 	align-self: center;
