--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -50,6 +50,11 @@ header {
 	border-width: 0px;
 	font-family: "Roboto Mono";
 }
+
+#headerButton:hover {
+	opacity: 0.8;
+}
+
 #addItemDiv {
 	display: flex;
 	width: 85%;
@@ -183,7 +188,7 @@ header {
 	display: flex;
 	align-items: center;
 	padding-left: 12px;
-	word-break: break-all;
+	word-break: normal;
 }
 
 .starIcon {
