--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -121,6 +121,10 @@ button {
 	margin-top: 30px;
 }
 
+#logOutButton:hover {
+	opacity: 0.8;
+}
+
 #logOutText {
 	font-size: 16px;
 	margin-left: 10px;
